# columnar-demo-external

./: .gitignore  README.md  pyproject.toml  requirements.txt
columnardemo/: columnar_driver.py  demo_run.py  streamlit_exec.py
columnardemo/sql/: create_database.sql  create_scope.sql
tests/: static_test.py
